--- a/bom-front/package.json
+++ b/bom-front/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
     "@swimlane/ngx-datatable": "^17.0.0",
+    "@types/gapi.auth2": "0.0.52",
     "jquery": "^3.5.1",
     "ngx-slick-carousel": "^0.5.1",
     "rxjs": "~6.5.4",
