--- a/bom-front/package.json
+++ b/bom-front/package.json
@@ -30,6 +30,12 @@
     "ngx-editor": "^5.0.0-alpha.9",
     "ngx-slick-carousel": "^0.5.1",
     "rxjs": "~6.5.4",
+    "ngx-quill": "^11.1.0",
+    "quill": "^1.3.7",
+    "quill-emoji": "^0.1.7",
+    "quill-image-resize": "^3.0.9",
+    "quill-image-resize-module": "^3.0.0",
+    "quill-mention": "^2.2.7",
     "slick-carousel": "^1.8.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
