--- a/bom-front/tsconfig.json
+++ b/bom-front/tsconfig.json
@@ -11,7 +11,7 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
-    "types": ["gapi.auth2"],
+    "types": ["gapi", "gapi.auth2"],
     "lib": [
       "es2018",
       "dom"
